--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pip install pip==21.1.3
+/home/appuser/venv/bin/python -m pip install --upgrade pip
 !pip install nltk
 !pip install requests
 !pip install requests-HTML
