--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-/home/appuser/venv/bin/python -m pip install --upgrade pip
+streamlit==0.75.0
 !pip install nltk
 !pip install requests
 !pip install requests-HTML
