--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit==0.75.0
+!pip install streamlit==0.75.0
 !pip install nltk
 !pip install requests
 !pip install requests-HTML
 !pip install pandas
 !pip install regex
 !pip install urlparse4
-!pip install streamlit
 !pip install pyngrok
